--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -1076,7 +1076,7 @@
     "Y_train_final = np.concatenate([Y_train, Y_validate], axis=0)\n",
     "linear_reg = LinearRegression()\n",
     "lasso_reg = Lasso(alpha=best_lasso_alpha, max_iter=4000)\n",
-    "ridge_reg = Ridge(alpha=best_alpha_ridge, max_iter=4000)\n",
+    "ridge_reg = Ridge(alpha=best_ridge_alpha, max_iter=4000)\n",
     "linear_reg.fit(X_train_final, Y_train_final)\n",
     "lasso_reg.fit(X_train_final, Y_train_final)\n",
     "ridge_reg.fit(X_train_final, Y_train_final)\n",
